# environments

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/setup/: action.yml
.github/workflows/: build.yml  docker-image.yml  docs-build-artifact.yml  docs-pr-cleanup.yml  docs-pr-close.yml  docs-pr.yml  docs-preview-remove.yml  docs-preview.yml  docs.yml
applications/geometry-powder-optimizer/: README.md  environment.lock.yml  environment.yml
citing/: index.html
custom-recipes/: Dockerfile  Makefile  README.md  build.sh  conda_build_config.yaml
docs/: citing.md  environments.md  gen_environments.py  gen_modules.py  gen_recipes.py  index.md  quick-start.md
docs/maintenance/: ci-cd.md  environments.md  instances.md  recipes.md
docs/stylesheets/: extra.css
environments/: index.html
environments/202301/: 0-desy-pinned.yml  1-base.yml  2-custom.yml  base.yml  conda-linux-64.lock.yml  conda-lock.yml  custom.yml  environment.lock.yml  environment.yml  index.html  install.sh  lock.sh
environments/202302/: 1-base.yml  2-custom.yml  environment.lock.yml  environment.yml  index.html
environments/202401/: 0-desy-pinned.yml  1-base.yml  README.md  environment.lock.yml  environment.yml  index.html
environments/SUMMARY/: index.html
environments/mambaforge/: environment.lock.yml  environment.yml
maintenance/environments/: index.html
modules/: EXtra-Xwiz  hipgisaxs  moonshot  moonshot~  openmpi-no-python  openmpi-python  simex  smilei  xraylarch
modules/amore/: beta  (+5 more)
quick-start/: index.html
scripts/: diff.py  utility.py
search/: search_index.json
stylesheets/: extra.css
(+339 files in other folders)
