[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "euxfel-environment-management"
description = 'EuXFEL Environment Management'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [{ name = "Robert Rosca", email = "robert.rosca@xfel.eu" }]
dependencies = []
version = "0.1.0"

[project.urls]
Documentation = "https://github.com/unknown/user-documentation#readme"
Issues = "https://github.com/unknown/user-documentation/issues"
Source = "https://github.com/unknown/user-documentation"

[tool.hatch.envs.default]
skip-install = true
dependencies = [
    "mkdocs>=1.4.0",
    "mkdocs-material~=8.5.10",
    "mkdocs-section-index~=0.3.4",
    "mkdocs-literate-nav~=0.5.0",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-gen-files",
    "PyYAML",
]

[tool.hatch.envs.default.scripts]
build = "mkdocs build --clean --strict {args}"
serve = "mkdocs serve --dev-addr localhost:8000 {args}"
