[tool.poetry]
name = "environments"
version = "202401"
description = "EuXFEL Environment Definitions and Documentation"
authors = ["Robert Rosca <32569096+RobertRosca@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.5"
mkdocs-material = "^8.5"
mkdocs-section-index = "^0.3"
mkdocs-literate-nav = "^0.5"
mkdocs-gen-files = "^0.5"
pyyaml = "^6.0"
poethepoet = "^0.24"

[tool.poe.tasks]
docs = "mkdocs"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
